2006-04-11  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_src_query),
	(gst_ogg_demux_chain_peer), (gst_ogg_pad_submit_packet),
	(gst_ogg_chain_free), (gst_ogg_demux_sink_event),
	(gst_ogg_demux_loop):
	More cleanups.
	Respect segment stop when emiting EOS or SEGMENT_DONE.
	Fixes (#337945).

2006-04-11  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/playback/gststreamselector.c:
	(gst_stream_selector_get_property):
	  Don't leak pad name.

2006-04-10  Michael Smith  <msmith@fluendo.com>

	* tests/check/Makefile.am:
	* tests/check/gst-plugins-base.supp:
	  Suppress an old libtheora bug (fixed in more recent versions), so 
	  that FC4 buildslaves can pass.

2006-04-10  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_src_query),
	(gst_ogg_demux_receive_event), (gst_ogg_pad_event),
	(gst_ogg_demux_init), (gst_ogg_demux_finalize),
	(gst_ogg_demux_sink_event), (gst_ogg_demux_get_data),
	(gst_ogg_demux_loop):
	Don't leak events.
	Remember what error we got when finding chains, if we
	were shutdown, that would not be an error.

2006-04-10  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_event):
	Starting the ringbuffer when we did not acquire it can cause
	a deadlock, is pointless and causes nasty things for
	subclasses. 
	Fixes gst-launch audiotestsrc num-buffers=0 ! alsasink.

2006-04-10  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_src_query),
	(gst_ogg_demux_receive_event), (gst_ogg_pad_event),
	(gst_ogg_demux_chain_peer), (gst_ogg_pad_submit_packet),
	(gst_ogg_demux_submit_buffer), (gst_ogg_demux_get_data),
	(gst_ogg_demux_deactivate_current_chain),
	(gst_ogg_demux_activate_chain), (gst_ogg_demux_perform_seek),
	(gst_ogg_demux_bisect_forward_serialno),
	(gst_ogg_demux_find_chains), (gst_ogg_demux_chain):
	Add some more debugging.

2006-04-10  Wim Taymans  <wim@fluendo.com>

	* ext/theora/theoradec.c: (theora_dec_src_event),